# LinuxChatBox

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
linuxchatbox/: main.py
linuxchatbox/core/: active_window.py  config.py  discord_rpc.py  display_options.py  mpris.py  osc.py  volume.py  vrchat_osc.py
linuxchatbox/gui/: discord_tab.py  mainwindow.py  media_tab.py  options_tab.py  status_tab.py
linuxchatbox/resources/: linuxchatbox.desktop
linuxchatbox/workers/: active_window_worker.py  discord_worker.py  media_worker.py  vrchat_worker.py
